<resources>
    <string name="app_name">Baseball Starting Lineup</string>
    <string name="app_title1">Baseball</string>
    <string name="app_title2">Starting Lineup</string>
    <string name="non_dh_version">Standard Order</string>
    <string name="dh_version">DH Order</string>
    <string name="first">１</string>
    <string name="second">２</string>
    <string name="third">３</string>
    <string name="fourth">４</string>
    <string name="fifth">５</string>
    <string name="sixth">６</string>
    <string name="seventh">７</string>
    <string name="eighth">８</string>
    <string name="ninth">９</string>
    <string name="pitcher_initial">P</string>
    <string name="role">Role</string>
    <string name="role_pitcher">Pitcher</string>
    <string name="role_batter">Hitter</string>
    <string name="role_runner">Runner</string>
    <string name="role_fielder">Fielder</string>
    <string name="pitcher_text">(P)</string>
    <string name="sub_label">Sub</string>
    <string name="sub">Sub</string>
    <string name="hyphen_5">-----</string>
    <string name="hyphen_4">----</string>
    <string name="save">REGISTER</string>
    <string name="clear">CLEAR</string>
    <string name="title"><u>Starting Member</u></string>
    <string name="sub_title">Sub Member</string>
    <string name="display_starting">Starting</string>
    <string name="display_sub">Sub</string>
    <string name="add_sub">Add Sub</string>
    <string name="delete_sub">Delete Sub</string>
    <string-array name="positions">
        <item>----</item>
        <item>(P)</item>
        <item>(C)</item>
        <item>(1B)</item>
        <item>(2B)</item>
        <item>(3B)</item>
        <item>(SS)</item>
        <item>(LF)</item>
        <item>(CF)</item>
        <item>(RF)</item>
    </string-array>
    <string-array name="positions_dh">
        <item>----</item>
        <item>(C)</item>
        <item>(1B)</item>
        <item>(2B)</item>
        <item>(3B)</item>
        <item>(SS)</item>
        <item>(LF)</item>
        <item>(CF)</item>
        <item>(RF)</item>
        <item>(DH)</item>
    </string-array>
    <string-array name="positions_all">
        <item>----</item>
        <item>(P)</item>
        <item>(C)</item>
        <item>(1B)</item>
        <item>(2B)</item>
        <item>(3B)</item>
        <item>(SS)</item>
        <item>(LF)</item>
        <item>(CF)</item>
        <item>(RF)</item>
        <item>(DH)</item>
    </string-array>

    <string name="privacy_policy">Privacy policy</string>
    <string name="policy_title">Privacy policy</string>
    <string name="policy_message1">＜about ad＞</string>
    <string name="policy_message2">This app is using AdMob(Google Inc.) as ad tools, AdMob can get information of users. If you want to know about these info Admob would get, these purpose, or provision to third parties, please check this privacy policy link below.</string>
    <string name="google_policy"><a href="https://policies.google.com/technologies/ads?hl=en">Policy about Google Ad</a></string>
    <string name="agree">Agree</string>
    <string name="close">Close</string>
    <string name="ask_finish_app">Finish this app?</string>
    <string name="yes">Yes</string>
    <string name="subOrder">DH</string>
    <string name="field">FIELD</string>
    <string name="back">BACK</string>
    <string name="cancel">CANCEL</string>
    <string name="exchange">EXCHANGE</string>
    <string name="require_exchange_title">Select 2 players to exchange</string>
    <string name="require_delete_title">Select a player to delete</string>
    <string name="announce_limit_sub">The number has reached its limit</string>
    <string name="share">LINE/Twitter</string>
    <string name="no_order">[-]</string>

    <string name="tweetMessage">I made a baseball lineup!</string>
    <string name="errorMassage">An error was happened</string>
    <string name="androidTab">Android: </string>
    <string name="googlePlayUrl">bit.ly/2RqsSm0</string>
    <string name="hashTagMessage">#BaseballLineupApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>