<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="1dp">

    <Button
        android:id="@+id/sub_order_button"
        android:layout_width="60sp"
        android:layout_height="wrap_content"
        android:background="@drawable/order_num_button_background"
        android:text="@string/sub_label"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pitcher_label"
                android:layout_width="52sp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@drawable/role_pitcher_on_background"
                android:gravity="center"
                android:maxLines="1"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/role_pitcher"
                android:textColor="#000000"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/batter_label"
                android:layout_width="52sp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@drawable/role_batter_on_background"
                android:gravity="center"
                android:maxLines="1"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/role_batter"
                android:textColor="#000000"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/runner_label"
                android:layout_width="52sp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@drawable/role_runner_on_background"
                android:gravity="center"
                android:maxLines="1"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/role_runner"
                android:textColor="#000000"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fielder_label"
                android:layout_width="52sp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@drawable/role_fielder_on_background"
                android:gravity="center"
                android:maxLines="1"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/role_fielder"
                android:textColor="#000000"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/sub_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/hyphen_5"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp"
        android:textStyle="bold" />


</LinearLayout>